<package>
    <name>trans_msg_time</name>
    <version>1.0.0</version>
    <description>
        The robot localization package provides localization for RoboMaster AI Robot
    </description>
    <author>RoboMaster</author>
    <maintainer email="robomaster@dji.com">RoboMaster</maintainer>
    <license>GPL 3.0 </license>
    <url>https://github.com/RoboMaster/RoboRTS</url>

    <buildtool_depend>catkin</buildtool_depend>

    <build_depend>roscpp</build_depend>
    <build_depend>tf</build_depend>
    <build_depend>nav_msgs</build_depend>
    <build_depend>sensor_msgs</build_depend>
    <build_depend>rosbag</build_depend>
    <build_depend>eigen_conversions</build_depend>
    <build_depend>tf_conversions</build_depend>
    <build_depend>livox_ros_driver</build_depend>

    <run_depend>roscpp</run_depend>
    <run_depend>tf</run_depend>
    <run_depend>nav_msgs</run_depend>
    <run_depend>sensor_msgs</run_depend>
    <run_depend>message_filters</run_depend>
    <run_depend>eigen_conversions</run_depend>
    <run_depend>tf_conversions</run_depend>
    <run_depend>livox_ros_driver</run_depend>

</package>

